--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Силуэт | массаж</title>
+    <title>Массаж в Нефтекамске</title>
+    <meta data-hid="name::description" name="description" content="Классический, антицеллюлитный, спортивный, лимфодренажный, баночный, оздоровительный, детский и другие виды массажа. Подходит для лечения и профилактики. Скидка на первое посещение, подарочные сертификаты на массаж. Более 10 лет опыта работы в сфере массажа.">
+    <meta data-hid="name::robots" name="robots" content="noodp, noyaca, noarchive">
     <link rel="icon" type="image/x-icon" href="/public/favicon.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.core.min.css">
     <link rel="stylesheet" href="css/main.css">
